--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -20,3 +20,7 @@ button {
     background-color:  var(--btx-title--color);
     color: var(--second-title-color);
 }
+.web--color-btx {
+    color: var(--btx-title--color);
+
+}
