--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -5,11 +5,8 @@
     padding-right: 15px;
     /* outline: 2px solid tomato */
 }
-.container--footer {
+.container--footer, .header--container {
     display: flex;
     align-items: baseline;
 }
- .header--container {
-     display: flex;
-     align-items: center;
-        }
+
