--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -16,7 +16,7 @@
     text-align: center;
     text-transform: uppercase;
     color: var(--second-title-color);
-    background: rgba(47, 48, 58, 0.8);
+    background: var(--work--background--color);
     bottom: 0;
     right: 0;
     height: 70px;
