--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -6,10 +6,19 @@
     --logo--title--color: #000000;
     --bgrd--title--color: #2F303A;
     --footer--title--color: rgba(255, 255, 255, 0.6);
+    --footer--soc--color: rgba(255, 255, 255, 10%);
     --team--section--color: #F5F4FA;
     --btx-color--bg: #188CE8;
     --bg--title-color: #E5E5E5;
     --soc--title--color: #AFB1B8;
     --header--border--color: #ECECEC;
     --card--content--color: #EEEEEE;
+    --mailing--form--color: rgba(255, 255, 255, 0.3);
+    --mailing-btn--color: rgba(0, 0, 0, 0.15);
+    --name--background--color: rgba(47, 48, 58, 0.4);
+    --work--background--color: rgba(47, 48, 58, 0.8);
+    --card--thumb--color:rgba(33, 150, 243, 0.9);
+    --backdrop--color--back:rgba(0, 0, 0, 0.2);
+    --modal--color--back: rgba(0, 0, 0, 0.1);
+    --wrap--color--back: rgba(33, 33, 33, 0.2);
 }
