--- a/css/main.css
+++ b/css/main.css
@@ -19,12 +19,21 @@
   --logo--title--color: #000000;
   --bgrd--title--color: #2F303A;
   --footer--title--color: rgba(255, 255, 255, 0.6);
+  --footer--soc--color: rgba(255, 255, 255, 10%);
   --team--section--color: #F5F4FA;
   --btx-color--bg: #188CE8;
   --bg--title-color: #E5E5E5;
   --soc--title--color: #AFB1B8;
   --header--border--color: #ECECEC;
   --card--content--color: #EEEEEE;
+  --mailing--form--color: rgba(255, 255, 255, 0.3);
+  --mailing-btn--color: rgba(0, 0, 0, 0.15);
+  --name--background--color: rgba(47, 48, 58, 0.4);
+  --work--background--color: rgba(47, 48, 58, 0.8);
+  --card--thumb--color:rgba(33, 150, 243, 0.9);
+  --backdrop--color--back:rgba(0, 0, 0, 0.2);
+  --modal--color--back: rgba(0, 0, 0, 0.1);
+  --wrap--color--back: rgba(33, 33, 33, 0.2);
 }
 
 p,
@@ -62,10 +71,6 @@ ul {
   border: 1px solid var(--soc--title--color);
 }
 
-.web--color-btx {
-  color: var(--btx-title--color);
-}
-
 body {
   font-family: "Roboto", sans-serif;
   background-color: var(--second-title-color);
@@ -86,14 +91,9 @@ body {
   /* outline: 2px solid tomato */
 }
 
-.container--footer {
+.container--footer, .header--container {
   display: flex;
   align-items: baseline;
-}
-
-.header--container {
-  display: flex;
-  align-items: center;
 }
 
 button {
@@ -118,6 +118,10 @@ button {
 .button--current {
   background-color: var(--btx-title--color);
   color: var(--second-title-color);
+}
+
+.web--color-btx {
+  color: var(--btx-title--color);
 }
 
 .address__list, .navigation__list {
@@ -251,7 +255,7 @@ button {
   height: 600px;
   text-align: center;
   padding: 200px 0;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../img/work.jpg);
+  background-image: linear-gradient(to right, var(--name--background--color), var(--name--background--color)), url(../img/work.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -308,7 +312,7 @@ button {
   background-size: 70px;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: #F5F4FA;
+  background-color: var(--team--section--color);
   margin-bottom: 30px;
 }
 .peculiarity__item:nth-child(1)::before {
@@ -361,7 +365,7 @@ button {
   text-align: center;
   text-transform: uppercase;
   color: var(--second-title-color);
-  background: rgba(47, 48, 58, 0.8);
+  background: var(--work--background--color);
   bottom: 0;
   right: 0;
   height: 70px;
@@ -499,7 +503,7 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--footer--title--color);
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -528,7 +532,7 @@ button {
 }
 .socials__link {
   color: var(--second-title-color);
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--footer--soc--color);
   transition-property: background-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -557,7 +561,7 @@ button {
   height: 50px;
   width: 358px;
   background-color: var(--bgrd--title--color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 1px solid var(--mailing--form--color);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px;
@@ -575,14 +579,14 @@ button {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
+  color: var(--footer--title--color);
 }
 
 .mailing-form__btn {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px var(--mailing-btn--color);
   padding: 10px 28px;
   margin-left: 12px;
 }
@@ -673,7 +677,7 @@ button {
   line-height: 1.6;
   letter-spacing: 0.03em;
   padding: 63px 24px;
-  background: rgba(33, 150, 243, 0.9);
+  background: var(--card--thumb--color);
   transform: translateY(101%);
   transition: transform 250ms linear;
 }
@@ -708,7 +712,7 @@ button {
   width: 100vw;
   height: 100vh;
   top: 0;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--backdrop--color--back);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -734,7 +738,7 @@ button {
   top: 10px;
   width: 30px;
   height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid var(--modal--color--back);
   border-radius: 50%;
   background-color: transparent;
   display: flex;
@@ -783,7 +787,7 @@ button {
 .wrap__input {
   width: 100%;
   height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid var(--wrap--color--back);
   border-radius: 4px;
   padding-left: 42px;
   color: var(--first-title-color);
@@ -819,7 +823,7 @@ button {
 .field-coment-text {
   width: 100%;
   height: 120px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
+  border: 1px solid var(--wrap--color--back);
   border-radius: 4px;
   resize: none;
   padding: 10px;
@@ -886,7 +890,7 @@ button {
 }
 
 .modal-button {
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 4px 4px rgba(38, 26, 26, 0.15);
   padding: 10px 52px;
   position: absolute;
   left: 165px;
