--- a/sass/layout/_name.scss
+++ b/sass/layout/_name.scss
@@ -4,8 +4,8 @@
     text-align: center;
     padding: 200px 0;
     background-image: linear-gradient(to right,
-            rgba(47, 48, 58, 0.4),
-            rgba(47, 48, 58, 0.4)), url(../img/work.jpg);
+            var(--name--background--color),
+            var(--name--background--color)), url(../img/work.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
