--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  width: 100%;
 }
 
 a {
@@ -84,11 +85,25 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 100%;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid tomato */
+}
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 480px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
 }
 
 .container--footer, .header--container {
@@ -151,8 +166,8 @@ button {
 }
 
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .fithers {
@@ -380,21 +395,26 @@ button {
 }
 
 .team__list {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
-  column-gap: 30px;
+  gap: 30px;
 }
 
 .team__item {
   background-color: var(--second-title-color);
   text-decoration: none;
-  width: 270px;
+  width: 100%;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
 }
-
-.card-team__img {
-  display: block;
+@media screen and (min-width: 768px) {
+  .team__item {
+    max-width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    max-width: calc((100% - 90px) / 4);
+  }
 }
 
 .content-team {
