--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -3,20 +3,26 @@
 }
 
 .team__list {
-    list-style: none;
+ 
     display: flex;
     flex-wrap: wrap;
-    column-gap: 30px;
+    gap: 30px;
 }
 .team__item {
     background-color: var(--second-title-color);
     text-decoration: none;
-    width: 270px;
+    width:100%;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+    @media screen and (min-width: 768px) {
+            max-width: calc((100% - 30px) / 2 );
+    
+        }
+    @media screen and (min-width: 768px) {
+            max-width: calc((100% - 90px) / 4);
+    
+        }
 }
-.card-team__img {
-    display: block;
-}
+
 .content-team {
     text-align: center;
     padding: 30px 32px;
