--- a/css/main.css
+++ b/css/main.css
@@ -169,6 +169,18 @@ button {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 768px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
 
 .fithers {
   padding-top: 0;
@@ -411,7 +423,7 @@ button {
     max-width: calc((100% - 30px) / 2);
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .team__item {
     max-width: calc((100% - 90px) / 4);
   }
