--- a/sass/layout/_peculiarity.scss
+++ b/sass/layout/_peculiarity.scss
@@ -1,9 +1,23 @@
  .peculiarity__list{
      display: flex;
-     column-gap: 30px;
+    flex-wrap: wrap;
+     gap: 30px;
  }
+ 
  .peculiarity__item {
-     flex-basis: calc((100% - 3 * 30px)/ 4 - 30px);
+   width: 100%;
+     flex-basis: calc((100% - 3 * 30px) / 4 - 30px);
+     
+        @media screen and (min-width: 768px) {
+                max-width: calc((100% - 30px) / 2);
+        
+            }
+        
+            @media screen and (min-width: 1200px) {
+                max-width: calc((100% - 90px) / 4);
+        
+            }
+
         &::before {
             display: block;
             content: '';
@@ -13,6 +27,7 @@
             background-position: center;
             background-color: var(--team--section--color);
             margin-bottom: 30px;
+            
         }
          &:nth-child(1)::before {
              background-image: url(../img/antenna.svg);
