--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,8 +1,7 @@
 
 .work__list {
-    list-style: none;
     display: flex;
-    column-gap: 30px;
+    gap: 30px;
 }
 .work-thumb {
     position: relative;
