--- a/css/main.css
+++ b/css/main.css
@@ -282,13 +282,23 @@ button {
   height: 600px;
   text-align: center;
   padding: 200px 0;
-  background-image: linear-gradient(to right, var(--name--background--color), var(--name--background--color)), url(../img/work.jpg);
+  background-image: linear-gradient(var(--name--background--color), var(--name--background--color)), url(../img/work-mobile.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   margin-right: auto;
   margin-left: auto;
   max-width: 1600px;
+}
+@media screen and (min-width: 768px) {
+  .name {
+    background-image: linear-gradient(var(--name--background--color), var(--name--background--color)), url(../img/work-tablet.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1200px) {
+  .name {
+    background-image: linear-gradient(var(--name--background--color), var(--name--background--color)), url(../img/work.jpg);
+  }
 }
 
 .container-name {
@@ -332,7 +342,6 @@ button {
 
 .peculiarity__item {
   width: 100%;
-  flex-basis: calc((100% - 90px) / 4 - 30px);
 }
 @media screen and (min-width: 768px) {
   .peculiarity__item {
@@ -341,7 +350,7 @@ button {
 }
 @media screen and (min-width: 1200px) {
   .peculiarity__item {
-    max-width: calc((100% - 90px) / 4);
+    max-width: calc((100% - 90px) / 4 - 30px);
   }
 }
 .peculiarity__item::before {
@@ -479,11 +488,27 @@ button {
 .client {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 30px;
 }
 .client-item {
-  width: 170px;
+  width: 100%;
   height: 92px;
+}
+@media screen and (min-width: 480px) {
+  .client-item {
+    max-width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 768px) {
+  .client-item {
+    max-width: calc((100% - 60px) / 3);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .client-item {
+    max-width: calc((100% - 150px) / 6);
+  }
 }
 .client-link {
   width: 100%;
@@ -643,16 +668,21 @@ button {
 }
 
 .port-btn {
-  font-family: inherit;
-  list-style: none;
   display: flex;
-  align-items: center;
   justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  gap: 15px 8px;
+  margin-bottom: 40px;
 }
-
-.port-btn__item {
-  margin-left: 8px;
+@media screen and (min-width: 768px) {
+  .port-btn {
+    margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .port-btn {
+    margin-bottom: 50px;
+  }
 }
 
 .port-btn__link {
@@ -679,15 +709,23 @@ button {
 }
 
 .menu-project {
-  list-style: none;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
 }
 
-.menu-project_item {
-  /* outline: 1px solid tomato; */
-  max-width: 100%;
+.menu-project__item {
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .menu-project__item {
+    max-width: calc((100% - 30px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .menu-project__item {
+    max-width: calc((100% - 60px) / 3);
+  }
 }
 
 .card-project {
