--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -1,12 +1,26 @@
 .client {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
       
     
         &-item {
-            width: 170px;
+            width: 100%;
             height: 92px;
+            @media screen and (min-width: 480px) {
+                    max-width: calc((100% - 30px) / 2);
+            
+                }
+            @media screen and (min-width: 768px) {
+                    max-width: calc((100% - 60px) / 3 );
+            
+                }
+            
+                @media screen and (min-width: 1200px) {
+                    max-width: calc((100% - 150px) / 6 );
+            
+                }
         }
     
         &-link {
