--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,20 +1,29 @@
 .header-list.header-link.current {
     color: var(--btx-title--color);
 }
-
-
-
 .port-btn {
-    font-family: inherit;
-    list-style: none;
     display: flex;
-    align-items: center;
     justify-content: center;
-    margin-bottom: 50px;
+    flex-wrap: wrap;
+     gap: 15px 8px;
+    margin-bottom: 40px;
+   
+     
+    @media screen and (min-width: 768px) {
+            margin-bottom: 30px;;
+    
+        }
+    
+        @media screen and (min-width: 1200px) {
+            margin-bottom: 50px;;
+    
+        }
 }
-.port-btn__item {
-    margin-left: 8px;
-}
+
+
+    
+    
+
 
 .port-btn__link {
     display: flex;
@@ -42,14 +51,22 @@
 
 
 .menu-project {
-    list-style: none;
+   
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
-.menu-project_item{
-    /* outline: 1px solid tomato; */
-    max-width: 100%;
+.menu-project__item{
+   width: 100%;
+    @media screen and (min-width: 768px) {
+            max-width: calc((100% - 30px) / 2);
+    
+        }
+    
+        @media screen and (min-width: 1200px) {
+            max-width: calc((100% - 60px) / 3);
+    
+        }
 }
 
 
