--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,8 +1,12 @@
    .title{ 
-   font-size: 36px;
-   line-height: 1.16;
+   font-size: 28px;
+   line-height: 1.17;
    letter-spacing: 0.03em;
    color: var(--first-title-color);
    text-align: center;
-   margin-bottom: 50px
+   margin-bottom: 50px;
+   @include desktop {
+   font-size: 36px;
+   line-height: 1.16;
+   }
    }
