--- a/sass/layout/_name.scss
+++ b/sass/layout/_name.scss
@@ -1,8 +1,8 @@
 .name {
     background-color: var(--bgrd--title--color);
-    height: 600px;
+    height: 400px;
     text-align: center;
-    padding: 200px 0;
+    padding: 118px 0;
     background-image: linear-gradient(
             var(--name--background--color),
             var(--name--background--color)),
@@ -12,7 +12,8 @@
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1600px;
+    padding: 118px 0;
+    max-width: 100%;
         @include mobile {
                 background-image: linear-gradient(
                     var(--name--background--color),
@@ -36,6 +37,10 @@
                     }
                 }
         @include desktop {
+                     padding-top: 200px;
+                     padding-bottom: 200px;
+                    max-width: 100%;
+                    height: 600px;
             background-image: linear-gradient(
                 var(--name--background--color),
                 var(--name--background--color)),
@@ -49,22 +54,36 @@
     }
 
 
-.container-name {
-    padding-right: 237px;
-    padding-left: 237px;
-}
+
+
+
 .name__text{
+    display: flex;
+    justify-content: center;
+
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 22px;
+    line-height: 1.61;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--second-title-color);
     margin-bottom: 30px;
-    display: flex;
-    width: 696px;
     margin-right: auto;
     margin-left: auto;
+    max-width: 340px;
+    @include mobile {
+        font-size: 26px;
+        max-width: 340px;
+    }
+    @include tablet {
+        font-size: 26px;
+        max-width: 340px;
+    }
+    @include desktop {
+        max-width: 600px;
+        font-size: 44px;
+         line-height: 1.36;
+    }
 }
 .name_btn {
     font-family: inherit;
