--- a/sass/layout/_client.scss
+++ b/sass/layout/_client.scss
@@ -6,8 +6,8 @@
       
     
         &-item {
-            width: 100%;
-            height: 92px;
+               width: calc((100% - 30px) / 2);
+               height: 92px;
             @media screen and (min-width: 480px) {
                     max-width: calc((100% - 30px) / 2);
             
