--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -16,8 +16,13 @@
 
  }
 }
-.container--footer, .header--container {
+.header--container {
     display: flex;
     align-items: baseline;
 }
+.container--footer{
+        display: flex;
+        align-items: baseline;
+        
+    }
 
