--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,10 @@ body {
 }
 
 .container--footer {
+  text-align: center;
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
 }
 
 button {
@@ -389,6 +391,7 @@ button {
 
 .peculiarity__list {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
 }
@@ -436,6 +439,12 @@ button {
   text-transform: uppercase;
   color: var(--first-title-color);
   margin-bottom: 10px;
+  text-align: center;
+}
+@media screen and (min-width: 768px) {
+  .peculiarity__title {
+    text-align: left;
+  }
 }
 
 .peculiarity__text {
@@ -443,12 +452,12 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-title--color);
-  width: 270px;
   height: 75px;
+  text-align: left;
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .peculiarity__text {
-    text-align: center;
+    text-align: left;
   }
 }
 
