--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -21,8 +21,9 @@
     align-items: baseline;
 }
 .container--footer{
-        display: flex;
-        align-items: baseline;
-        
-    }
+    text-align: center;
+        display:  flex;
+        flex-direction: column;
+        align-items: center;
+}
 
