--- a/sass/layout/_peculiarity.scss
+++ b/sass/layout/_peculiarity.scss
@@ -1,5 +1,6 @@
  .peculiarity__list{
      display: flex;
+     justify-content: center;
     flex-wrap: wrap;
      gap: 30px;
  }
@@ -14,7 +15,6 @@
         
             @media screen and (min-width: 1200px) {
                 max-width: calc((100% - 3 * 30px) / 4 - 30px);
-       
             }
 
         &::before {
@@ -49,7 +49,10 @@
      text-transform: uppercase;
      color: var(--first-title-color);
      margin-bottom: 10px;
-    
+     text-align: center;
+    @include tablet {
+            text-align: left;
+        }
 
 }
 
@@ -59,9 +62,13 @@
      line-height: 1.71;
      letter-spacing: 0.03em;
      color: var(--text-title--color);
-     width: 270px;
+    //  width: 270px;
      height: 75px;
-        @include mobile {
-                text-align: center;
-            }
+
+
+    text-align: left;
+    @include tablet{
+        text-align: left;
+    }
+           
  }
