--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,15 @@
 .header {
     border-bottom: 1px solid  var(--header--border--color);
-
+.header--container {
+        display: flex;
+        align-items: baseline;
+    }
 }
 .header__logo {
     font-family: 'Raleway';
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19;
+    line-height: calc(28 /24);
     letter-spacing: 0.03em;
     list-style: none;
     text-decoration: none;
@@ -14,16 +17,27 @@
     padding-top: 24px;
     padding-bottom: 25px;
     margin-right: 93px;
+
+    @include desktop {
+        font-weight: 700;
+            font-size: 26px;
+            line-height: 1.19;
+            letter-spacing: 0.03em;
+    }
+    
 }
 
 .navigation__list {
     display: flex;
     display: none;
+    @include tablet {
+        display: flex;
+    }
 }
 .navigation__item:not(:last-child) {
     margin-right: 50px;
 }
-.navigation__link{
+.navigation__link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -44,6 +58,9 @@
     color: var(--btx-title--color);
     position: relative;
     display: none;
+    @include tablet {
+        display: flex;
+    }
      &::after {
             position: absolute;
             content: "";
@@ -58,6 +75,9 @@
 .connect{
 margin-left: auto; 
 display: none;
+ @include tablet {
+    display: flex;
+ }
 
     &__list {
 
@@ -68,8 +88,8 @@ display: none;
 
     &__link {
         font-weight: 500;
-        font-size: 14px;
-        line-height: 1.14;
+        font-size: 12px;
+        line-height: calc(14 / 12);
         letter-spacing: 0.02em;
         list-style: none;
         text-decoration: none;
@@ -86,6 +106,12 @@ display: none;
         &:focus {
             color: var(--btx-title--color);
         }
+        @include desktop{
+            font-weight: 500;
+                font-size: 14px;
+                line-height: 1.14;
+                letter-spacing: 0.02em;
+        }
     }
 
     &__icon {
@@ -93,5 +119,142 @@ display: none;
         margin-right: 10px;
     }
 }
+.menu-open{
+    margin-left: auto;
+    display: inline-flex;
+    background-color: var(--second-title-color);
+    &__icon {
+            fill: var(--logo--title--color);
+            transition-property: fill;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+            &:hover,
+            &:focus {
+                fill: var(--btx-title--color);
+            }
+        }
+    @include tablet {
+        visibility: hidden;
+    }
+   
+}
 
 
+.mob-menu {
+    position: fixed;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--second-title-color) ;
+    top: 0;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    padding-left: 40px;
+    
+    > .container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-between;
+        overflow: auto;
+    }
+    
+}
+
+.menu-close{
+    position: absolute;
+        right: 10px;
+        top: 10px;
+        width: 30px;
+        height: 30px;
+        border: 1px solid var(--modal--color--back);
+        margin-bottom: 8px;
+        border-radius: 50%;
+        background-color: transparent;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: var(-logo--title--color);
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+        &:focus {
+            color: var(--btx-color--bg);
+        }
+}
+
+
+    .mob-menu__icon {
+            fill: currentColor;
+        }
+
+.mob-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+}
+.mob-menu__link {
+    font-weight: 500;
+        font-size: 40px;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+        color: var(--first-title-color);
+        transition-property: color;
+            transition-duration: 250ms;
+            transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        &:hover,
+            &:focus {
+                color: var(--btx-color--bg);
+            }
+}
+
+.menu-connect {
+    margin-bottom: 64px;
+}
+
+.menu-connect-tell {
+    font-weight: 500;
+        font-size: 34px;
+        line-height: calc(40 / 34);
+        letter-spacing: 0.02em;
+        color: var(--btx-color--bg) ;
+        margin-bottom: 32px;
+        padding: 16px 0;
+        
+    }
+
+.menu-connect-mail {
+    font-weight: 500;
+        font-size: 24px;
+        line-height: calc(28 /24);
+        letter-spacing: 0.02em;
+        color: var(--text-title--color);
+        
+}
+.menu-soc__list{
+    display: flex;
+    justify-content: left;
+    
+    
+}
+
+
+.menu-soc__item:not(:last-child) {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+        
+    
+}
+
+.menu-soc__link {
+    font-weight: 500;
+        font-size: 18px;
+        line-height: calc(22 /18);
+        letter-spacing: 0.02em;
+        color: var(--btx-color--bg);
+        padding-left: 10px;
+            padding-right: 10px;
+        
+            
+                    
+                    
+}
