--- a/css/main.css
+++ b/css/main.css
@@ -187,7 +187,7 @@ button {
 }
 .header .header--container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 .header__logo {
@@ -199,8 +199,8 @@ button {
   list-style: none;
   text-decoration: none;
   color: var(--logo--title--color);
-  padding-top: 24px;
-  padding-bottom: 25px;
+  padding-top: 26px;
+  padding-bottom: 26px;
   margin-right: 93px;
 }
 @media screen and (min-width: 1200px) {
@@ -212,14 +212,24 @@ button {
   }
 }
 
-.navigation__list {
-  display: flex;
+.header-menu {
   display: none;
 }
 @media screen and (min-width: 768px) {
-  .navigation__list {
+  .header-menu {
     display: flex;
+    align-items: center;
   }
+}
+@media screen and (min-width: 1200px) {
+  .header-menu {
+    display: flex;
+    align-items: center;
+  }
+}
+
+.navigation__list {
+  display: flex;
 }
 
 .navigation__item:not(:last-child) {
@@ -246,12 +256,6 @@ button {
 .current {
   color: var(--btx-title--color);
   position: relative;
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .current {
-    display: flex;
-  }
 }
 .current::after {
   position: absolute;
@@ -264,19 +268,15 @@ button {
   background-color: var(--btx-title--color);
 }
 
-.connect {
-  margin-left: auto;
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .connect {
-    display: flex;
-  }
-}
 .connect__list {
-  display: flex;
-  align-items: center;
-  gap: 50px;
+  margin-left: auto;
+}
+@media screen and (min-width: 1200px) {
+  .connect__list {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+  }
 }
 .connect__link {
   font-weight: 500;
@@ -286,13 +286,19 @@ button {
   list-style: none;
   text-decoration: none;
   color: var(--text-title--color);
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   display: flex;
   align-items: center;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .connect__link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 .connect__link:hover, .connect__link:focus {
   color: var(--btx-title--color);
@@ -306,13 +312,44 @@ button {
   }
 }
 .connect__icon {
-  fill: currentColor;
   margin-right: 10px;
+}
+
+.icon-tell {
+  fill: currentColor;
+}
+@media screen and (min-width: 768px) {
+  .icon-tell {
+    width: 10px;
+    height: 14px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .icon-tell {
+    width: 10px;
+    height: 16px;
+  }
+}
+
+.icon-mail {
+  fill: currentColor;
+}
+@media screen and (min-width: 768px) {
+  .icon-mail {
+    width: 14px;
+    height: 10px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .icon-mail {
+    width: 16px;
+    height: 12px;
+  }
 }
 
 .menu-open {
   margin-left: auto;
-  display: inline-flex;
+  display: grid;
   background-color: var(--second-title-color);
 }
 .menu-open__icon {
@@ -326,7 +363,7 @@ button {
 }
 @media screen and (min-width: 768px) {
   .menu-open {
-    visibility: hidden;
+    display: none;
   }
 }
 
@@ -413,6 +450,7 @@ button {
   line-height: 1.1666666667;
   letter-spacing: 0.02em;
   color: var(--text-title--color);
+  padding: 16px 0;
 }
 
 .menu-soc__list {
