--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,8 @@
     border-bottom: 1px solid  var(--header--border--color);
 .header--container {
         display: flex;
-        align-items: baseline;
+      
+        align-items: center;
     }
 }
 .header__logo {
@@ -14,8 +15,8 @@
     list-style: none;
     text-decoration: none;
     color: var(--logo--title--color);
-    padding-top: 24px;
-    padding-bottom: 25px;
+    padding-top: 26px;
+    padding-bottom: 26px;
     margin-right: 93px;
 
     @include desktop {
@@ -26,13 +27,21 @@
     }
     
 }
-
-.navigation__list {
-    display: flex;
+.header-menu{
     display: none;
     @include tablet {
-        display: flex;
-    }
+            display: flex;
+            align-items: center
+        }
+                @include desktop {
+                    display: flex;
+                    align-items: center
+                }
+}
+.navigation__list {
+    display: flex;
+   
+    
 }
 .navigation__item:not(:last-child) {
     margin-right: 50px;
@@ -57,10 +66,7 @@
 .current {
     color: var(--btx-title--color);
     position: relative;
-    display: none;
-    @include tablet {
-        display: flex;
-    }
+
      &::after {
             position: absolute;
             content: "";
@@ -73,19 +79,15 @@
         }
 }
 .connect{
-margin-left: auto; 
-display: none;
- @include tablet {
-    display: flex;
- }
 
+    
     &__list {
-
-        display: flex;
-        align-items: center;
-        gap: 50px;
-    }
-
+        margin-left: auto;
+    @include desktop {
+            display: flex;
+            align-items: center;
+            gap: 30px;}
+        }
     &__link {
         font-weight: 500;
         font-size: 12px;
@@ -94,14 +96,17 @@ display: none;
         list-style: none;
         text-decoration: none;
         color: var(--text-title--color);
-        padding-top: 32px;
-        padding-bottom: 32px;
+         padding-top: 5px;
+        padding-bottom: 5px;     
         display: flex;
         align-items: center;
         transition-property: color;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+         @include desktop {
+            padding-top: 32px;
+                padding-bottom: 32px;
+         }
         &:hover,
         &:focus {
             color: var(--btx-title--color);
@@ -115,13 +120,36 @@ display: none;
     }
 
     &__icon {
-        fill: currentColor;
         margin-right: 10px;
     }
 }
+.icon-tell {
+    fill: currentColor;
+    @include tablet {
+        width: 10px;
+            height: 14px;
+    }
+ @include tablet {
+     width: 10px;
+     height: 16px;
+ }
+}
+ .icon-mail {
+     fill: currentColor;
+
+     @include tablet {
+         width: 14px;
+         height: 10px;
+     }
+
+     @include tablet {
+         width: 16px;
+         height: 12px;
+     }
+}
 .menu-open{
     margin-left: auto;
-    display: inline-flex;
+    display: grid;
     background-color: var(--second-title-color);
     &__icon {
             fill: var(--logo--title--color);
@@ -134,9 +162,9 @@ display: none;
                 fill: var(--btx-title--color);
             }
         }
-    @include tablet {
-        visibility: hidden;
-    }
+   @include tablet {
+       display: none;
+   }
    
 }
 
@@ -229,6 +257,7 @@ display: none;
         line-height: calc(28 /24);
         letter-spacing: 0.02em;
         color: var(--text-title--color);
+        padding: 16px 0;
         
 }
 .menu-soc__list{
