--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,7 @@ button {
   color: var(--logo--title--color);
   padding-top: 26px;
   padding-bottom: 26px;
-  margin-right: 93px;
+  margin-right: 88px;
 }
 @media screen and (min-width: 1200px) {
   .header__logo {
@@ -209,6 +209,7 @@ button {
     font-size: 26px;
     line-height: 1.19;
     letter-spacing: 0.03em;
+    margin-right: 93px;
   }
 }
 
@@ -219,6 +220,7 @@ button {
   .header-menu {
     display: flex;
     align-items: center;
+    width: 100%;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -268,7 +270,7 @@ button {
   background-color: var(--btx-title--color);
 }
 
-.connect__list {
+.connect {
   margin-left: auto;
 }
 @media screen and (min-width: 1200px) {
@@ -349,7 +351,6 @@ button {
 
 .menu-open {
   margin-left: auto;
-  display: grid;
   background-color: var(--second-title-color);
 }
 .menu-open__icon {
@@ -451,6 +452,8 @@ button {
   letter-spacing: 0.02em;
   color: var(--text-title--color);
   padding: 16px 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .menu-soc__list {
@@ -661,6 +664,15 @@ button {
   }
 }
 
+.work {
+  display: none;
+}
+@media screen and (min-width: 1200px) {
+  .work {
+    display: inline;
+  }
+}
+
 .work__list {
   display: flex;
   gap: 30px;
@@ -802,6 +814,35 @@ button {
   padding: 60px 0;
 }
 
+.container--footer {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+}
+@media screen and (min-width: 768px) {
+  .container--footer {
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: baseline;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container--footer {
+    flex-wrap: nowrap;
+    text-align: start;
+    display: flex;
+    align-items: baseline;
+  }
+}
+
+.contacts {
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    flex-basis: 50%;
+  }
+}
 .contacts__web-studio {
   font-family: "Raleway";
   font-weight: 700;
@@ -847,9 +888,15 @@ button {
 }
 
 .socials {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  margin-left: 70px;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+@media screen and (min-width: 768px) {
+  .socials {
+    flex-basis: 50%;
+  }
 }
 .socials__info {
   font-size: 14px;
@@ -879,7 +926,22 @@ button {
 }
 
 .mailing {
-  margin-left: auto;
+  margin: auto;
+}
+@media screen and (min-width: 768px) {
+  .mailing {
+    flex-direction: column;
+    text-align: center;
+    width: 100%;
+    flex-basis: 50%;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .mailing {
+    flex-basis: 100%;
+    margin: 0;
+  }
 }
 .mailing__info {
   font-size: 14px;
@@ -907,6 +969,12 @@ button {
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .mailing-form__input {
+    width: 358px;
+  }
 }
 .mailing-form__input::placeholder {
   font-weight: 400;
@@ -1074,8 +1142,8 @@ button {
 
 .modal {
   background-color: var(--second-title-color);
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   border-radius: 4px;
   position: absolute;
   top: 50%;
@@ -1083,6 +1151,12 @@ button {
   transform: translate(-50%, -50%) scale(1) rotate(0);
   transition: transform 250ms cubic-bezier(0.57, 0.57, 1, 0.92);
   padding: 40px;
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0) rotate(360deg);
@@ -1116,10 +1190,16 @@ button {
 .modal-title {
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    font-size: 20px;
+    line-height: 1.15;
+  }
 }
 
 .field {
@@ -1206,7 +1286,7 @@ button {
 
 .check {
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1;
   letter-spacing: 0.03em;
   color: var(--text-title--color);
@@ -1215,6 +1295,12 @@ button {
   justify-content: center;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 1200px) {
+  .check {
+    font-size: 14px;
+    line-height: 1;
+  }
 }
 .check span {
   width: 16px;
@@ -1249,5 +1335,10 @@ button {
   box-shadow: 0px 4px 4px rgba(38, 26, 26, 0.15);
   padding: 10px 52px;
   position: absolute;
-  left: 165px;
+  left: 125px;
+}
+@media screen and (min-width: 1200px) {
+  .modal-button {
+    left: 165px;
+  }
 }/*# sourceMappingURL=main.css.map */
