--- a/sass/layout/_window.scss
+++ b/sass/layout/_window.scss
@@ -9,8 +9,8 @@
 }
 .modal {
     background-color: var(--second-title-color);
-    width: 528px;
-    min-height: 581px;
+    width: 450px;
+    min-height: 609px;
     border-radius: 4px;
     position: absolute;
     top: 50%;
@@ -18,6 +18,10 @@
     transform: translate(-50%, -50%) scale(1) rotate(0);
     transition: transform 250ms cubic-bezier(.57, .57, 1, .92);
     padding: 40px;
+    @include desktop {
+        width: 528px;
+            min-height: 581px;
+    }
     .backdrop.is-hidden & {
             transform: translate(-50%, -50%) scale(0) rotate(360deg);
          }
@@ -49,10 +53,14 @@
 .modal-title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 12px;
+    @include desktop {
+        font-size: 20px;
+            line-height: 1.15;
+    }
 }
 .field {
     margin-bottom: 10px
@@ -138,7 +146,7 @@
 
 .check {
     font-weight: 400;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1;
     letter-spacing: 0.03em;
     color: var(--text-title--color);
@@ -147,6 +155,10 @@
     justify-content: center;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @include desktop {
+        font-size: 14px;
+            line-height: 1;
+    }
        span {
             width: 16px;
             height: 15px;
@@ -180,5 +192,8 @@
     box-shadow: 0px 4px 4px rgba(38, 26, 26, 0.15);
     padding: 10px 52px;
     position: absolute;
-    left: 165px;
+    left: 125px;
+    @include desktop {
+        left: 165px;
+    }
 }
